# kursach_1sem

./: .gitignore  README.md
lab1/: CMakeLists.txt  lab1.cpp  lab1.h
lab2/: CMakeLists.txt  lab2.cpp  lab2.h
lab3/: CMakeLists.txt  lab3.cpp  lab3.h
lab4/: CMakeLists.txt  lab4.cpp  lab4.h
main/: CMakeLists.txt  main.cpp
